# azul-practice

./: .gitignore  README.md
docs/: BUGFIX_2026-01-19_EVALUATION_CONSISTENCY.md  BUGFIX_2026-01-19_EVALUATION_CONSISTENCY_FIXED.md  BUGFIX_2026-01-19_EV_CONSISTENCY.md  DOCUMENTATION_UPDATE_2026-01-18.md  DOCUMENTATION_UPDATE_2026-01-19.md  DOCUMENTATION_UPDATE_2026-01-19_DETERMINISTIC_FIX.md  DOCUMENTATION_UPDATE_2026-01-19_SPRINT_05_COMPLETE.md  DOCUMENTATION_UPDATE_2026-01-19_SPRINT_06_COMPLETE.md  EVALUATION_CONSISTENCY_SUMMARY.md  README.md  SPRINT_STATUS.md
docs/adr/: ADR-0001_key_mvp_decisions.md
docs/engineering/: 05_architecture_and_wasm_boundary.md  10_build_and_tooling_plan.md  azul_best_move_algorithm_research_synthesis.md  move_evaluation_algorithm_reference.md  scenario_generation_algorithm_reference.md
docs/product/: 01_vision_and_scope.md  02_mvp_requirements.md
docs/research/: azul_benchmark_harness_spec.md  azul_research_plan.md  (+1 more)
rust/: Cargo.toml
rust/engine/: Cargo.toml
rust/engine/src/: lib.rs  version.rs  wasm_api.rs
rust/engine/src/model/: action.rs  mod.rs  player.rs  state.rs  tests.rs  types.rs
rust/engine/src/rules/: apply.rs  constants.rs  end_of_round.rs  error.rs  evaluator.rs  feedback.rs  filters.rs  generator.rs  invariants.rs  legality.rs  mod.rs  policy.rs  refill.rs  resolution.rs  rng.rs  rollout.rs  scoring.rs  tests.rs  wall_utils.rs
rust/engine/tests/: integration_test.rs
rust/engine/tests/fixtures/: mid_game_state.json
scripts/: build-wasm.ps1  build-wasm.sh
web/: index.html  package.json  vite.config.ts
(+73 files in other folders)
