[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-logger = "0.2"
log = "0.4"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
